Update da1469x-sdk-guide.mdx BLE to Bluetooth LE (#323)
Updated BLE to Bluetooth LE as Bluetooth SIG prefers.

--- a/docs/mcu/da1469x-sdk-guide.mdx
+++ b/docs/mcu/da1469x-sdk-guide.mdx
@@ -294,7 +294,7 @@ To try it out, simply:
 
 - Open or install a recent version of the
   [Google Chrome Browser](https://www.google.com/chrome/)
-- Make sure your BLE device is advertising
+- Make sure your Bluetooth LE device is advertising
 - Navigate to the Memfault Diagnostic Web Bluetooth App at
   [https://mflt.io/mds](https://mflt.io/mds), click "Connect", and select your
   device.
