Clarify OATs are only recommended for automation

--- a/docs/ci/authentication.mdx
+++ b/docs/ci/authentication.mdx
@@ -12,8 +12,12 @@ Accessing resources via the
 various mechanisms available for authentication, each with subtle differences in
 scope and limitations.
 
-The **recommended** authentication mechanism for automation is
+::: note
+
+The recommended authentication mechanism for automation scripts is
 [Organization Auth Tokens](#organization-auth-token).
+
+:::
 
 ### Organization Auth Token
 
